force-app/main/default/objects/Reservation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Munnar</fullName>
            </value>
            <value>
                <fullName>Panaji</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Manali</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Rishikesh</fullName>
            </value>
            <value>
                <fullName>Darjeeling</fullName>
            </value>
            <value>
                <fullName>Srinagar</fullName>
            </value>
            <value>
                <fullName>North Goa</fullName>
            </value>
            <value>
                <fullName>South Goa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>