force-app/main/default/objects/Reservation__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Reservations (Dealer)</relationshipLabel>
    <relationshipName>Reservations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>