force-app/main/default/objects/Reservation__c/fields/Reason_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Cancellation__c</fullName>
    <label>Reason of Cancellation</label>
    <type>TextArea</type>
</CustomField>