force-app/main/default/objects/Reservation__c/fields/Vehicle_Information__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Information__c</fullName>
    <label>Vehicle Information</label>
    <length>25</length>
    <type>Text</type>
</CustomField>