force-app/main/default/objects/Reservation__c/fields/Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Price__c</fullName>
    <label>Vehicle Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>